# blpl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile
include/blpl/: AbstractFilter.h  AbstractFilterThread.h  AbstractPipe.h  AbstractPipeline.h  Filter.h  FilterThread.h  FunctorFilter.h  Generator.h  InterceptingFilterListener.h  Log.h  MultiFilter.h  Pipe.h  Pipeline.h  Pipeline_global.h  Profiler.h  ProfilingFilterListener.h
source/blpl/: AbstractPipe.cpp  AbstractPipeline.cpp  Log.cpp  Profiler.cpp
test/: CMakeLists.txt
test/source/: filterlistener.test.cpp  filterthread.test.cpp  functorfilter.test.cpp  multifilter.test.cpp  pipe.test.cpp  pipeline.test.cpp
